[package]
name = "amethyst-tests"
version = "0.1.0"
authors = ["Simon Rönnberg <simon.ronnberg@codemill.se>"]

[dependencies]
amethyst = { path = "../amethyst/" }
remawin = { path = "../remawin-rs/remawin/" }
remawin_glutin_mapper = { path = "../remawin-rs/remawin_glutin_mapper/" }
glutin = "*"
time = "*"

[[example]]
name = "hello"
path = "01_hello/main.rs"
